--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -26,6 +26,7 @@
   },
   "peerDependencies": {
     "@onyx/abis": "workspace:*",
+    "@onyx/environment": "workspace:*",
     "decimal.js": "^10.4.3",
     "viem": "^2.37.5"
   },
