--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,38 +1,48 @@
 {
+  "include": [],
   "compilerOptions": {
-    "composite": true,
-    "allowSyntheticDefaultImports": true,
-    "baseUrl": "./",
-    "declaration": true,
-    "emitDecoratorMetadata": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "incremental": true,
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "noFallthroughCasesInSwitch": false,
-    "noImplicitAny": false,
-    "outDir": "./dist",
-    "removeComments": true,
-    "resolveJsonModule": true,
-    "sourceMap": true,
     "strict": true,
-    "strictBindCallApply": false,
+    "moduleDetection": "force",
+    "composite": true,
+    "downlevelIteration": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": false,
+    "declaration": true,
+    "skipLibCheck": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "moduleResolution": "node",
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "isolatedModules": true,
+    "sourceMap": true,
+    "declarationMap": true,
+    "noImplicitReturns": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": true,
+    "noEmitOnError": false,
+    "noErrorTruncation": false,
+    "allowJs": false,
+    "checkJs": false,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "noUncheckedIndexedAccess": false,
     "strictNullChecks": true,
-    "strictPropertyInitialization": false,
+    "baseUrl": ".",
     "target": "ESNext",
-    "types": ["node"],
+    "module": "ESNext",
+    "incremental": true,
+    "removeComments": false,
     "paths": {
-      "@enzymefinance/environment": ["./packages/environment/src/index.js"],
-      "@enzymefinance/environment/test": [
-        "./packages/environment/test/setup.js"
-      ],
-      "@enzymefinance/environment/*": ["./packages/environment/src/*.js"],
-      "@enzymefinance/sdk": ["./packages/sdk/src/index.js"],
-      "@enzymefinance/sdk/test": ["./packages/sdk/test/setup.js"],
-      "@enzymefinance/sdk/*": ["./packages/sdk/src/*.js"],
-      "@enzymefinance/abis": ["./packages/abis/src/index.js"],
-      "@enzymefinance/abis/*": ["./packages/abis/src/abis/*.js"]
+      "@onyx/environment": ["./packages/environment/src/index.ts"],
+      "@onyx/environment/test": ["./packages/environment/test/setup.ts"],
+      "@onyx/environment/*": ["./packages/environment/src/*.ts"],
+      "@onyx/sdk": ["./packages/sdk/src/index.ts"],
+      "@onyx/sdk/test": ["./packages/sdk/test/setup.ts"],
+      "@onyx/sdk/*": ["./packages/sdk/src/*.ts"],
+      "@onyx/abis": ["./packages/abis/src/index.ts"],
+      "@onyx/abis/*": ["./packages/abis/src/abis/*.ts"]
     }
   }
 }
