--- a/packages/sdk/tsconfig.src.json
+++ b/packages/sdk/tsconfig.src.json
@@ -4,6 +4,9 @@
   "references": [
     {
       "path": "../abis"
+    },
+    {
+      "path": "../environment"
     }
   ],
   "compilerOptions": {
