--- a/packages/environment/package.json
+++ b/packages/environment/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@onyx/environment",
-  "description": "Enzyme is an Ethereum-based protocol for decentralized on-chain asset management.",
-  "version": "6.3.66",
+  "version": "1.0.0",
+  "description": "Onyx is an protocol for decentralized on-chain asset management.",
   "type": "module",
   "publishConfig": {
     "access": "public",
@@ -25,29 +25,10 @@
     "reupload:pendle:icons": "tsx ./scripts/reupload-pendle-icons.ts"
   },
   "peerDependencies": {
-    "@onyx/sdk": "workspace:*",
-    "viem": "^2.7.16"
+    "viem": "^2.37.5"
   },
   "devDependencies": {
-    "@onyx/sdk": "workspace:*",
-    "@types/jscodeshift": "^17.3.0",
-    "arg": "^5.0.2",
-    "dotenv": "^16.4.7",
-    "ethers": "^6.13.5",
-    "inquirer": "^12.5.2",
-    "jscodeshift": "^17.3.0",
-    "p-throttle": "^6.2.0",
-    "tsx": "^4.19.0",
-    "viem": "^2.21.44",
-    "zod": "^3.23.8"
-  },
-  "effect": {
-    "generateExports": {
-      "include": [
-        "*.ts",
-        "assets/*.ts",
-        "deployments/*.ts"
-      ]
-    }
+    "viem": "^2.37.5",
+    "typescript": "^5.8.3"
   }
 }
