--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@2.3.0/schema.json",
-  "changelog": ["@changesets/changelog-github", { "repo": "enzymefinance/enzyme-sdk" }],
+  "changelog": [
+    "@changesets/changelog-github",
+    { "repo": "enzymefinance/onyx-sdk" }
+  ],
   "commit": false,
   "fixed": [],
   "linked": [],
