chore: fix lint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "extends": "./tsconfig.base.json",
-  "references": [
-    { "path": "./packages/abis" },
-    { "path": "./packages/environment" },
-    { "path": "./packages/sdk" }
-  ],
+  "references": [{ "path": "./packages/abis" }, { "path": "./packages/environment" }, { "path": "./packages/sdk" }],
   "compilerOptions": {
     "noEmit": true,
     "tsBuildInfoFile": ".tsbuildinfo/root.tsbuildinfo"
