chore: update build config

--- a/packages/sdk/tsconfig.build.json
+++ b/packages/sdk/tsconfig.build.json
@@ -2,7 +2,10 @@
   "extends": "./tsconfig.src.json",
   "references": [
     {
-      "path": "../abis"
+      "path": "../abis/tsconfig.build.json"
+    },
+    {
+      "path": "../environment/tsconfig.build.json"
     }
   ],
   "compilerOptions": {
