--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@biomejs/biome": "2.2.4",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.7",
+    "@effect/build-utils": "^0.7.7",
     "@types/node": "^22.5.1",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
     "typescript": "^5.8.3",
