--- a/.github/workflows/reusable-verify.yaml
+++ b/.github/workflows/reusable-verify.yaml
@@ -49,8 +49,6 @@ jobs:
     timeout-minutes: 10
     strategy:
       fail-fast: true
-      matrix:
-        shard: [1/4, 2/4, 3/4, 4/4]
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
@@ -58,4 +56,4 @@ jobs:
         uses: ./.github/actions/install-dependencies
       - name: Run tests
         working-directory: packages/sdk
-        run: pnpm vitest --shard ${{ matrix.shard }}
+        run: pnpm vitest
