chore: rename packages

--- a/packages/abis/package.json
+++ b/packages/abis/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@onyx/abis",
+  "name": "@enzymefinance/onyx-abis",
   "description": "Onyx is an Ethereum-based protocol for decentralized on-chain asset management.",
   "version": "0.0.0",
   "type": "module",
