--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@onyx/sdk",
+  "name": "@enzymefinance/onyx-sdk",
   "description": "Onyx is an Ethereum-based protocol for decentralized on-chain asset management.",
   "version": "0.0.0",
   "type": "module",
@@ -25,13 +25,13 @@
     "build-annotate": "babel build/esm --plugins annotate-pure-calls --out-dir build/esm --source-maps"
   },
   "peerDependencies": {
-    "@onyx/abis": "workspace:*",
-    "@onyx/environment": "workspace:*",
+    "@enzymefinance/onyx-abis": "workspace:*",
+    "@enzymefinance/onyx-environment": "workspace:*",
     "viem": "^2.37.5"
   },
   "devDependencies": {
-    "@onyx/abis": "workspace:*",
-    "@onyx/environment": "workspace:*",
+    "@enzymefinance/onyx-abis": "workspace:*",
+    "@enzymefinance/onyx-environment": "workspace:*",
     "viem": "^2.37.5",
     "typescript": "^5.8.3"
   }
