--- a/.github/workflows/on-push-to-main.yaml
+++ b/.github/workflows/on-push-to-main.yaml
@@ -29,6 +29,8 @@ jobs:
         uses: actions/checkout@v5
       - name: Install dependencies
         uses: ./.github/actions/install-dependencies
+      - name: Update npm
+        run: npm install -g npm@latest
       - name: Manage changesets
         uses: changesets/action@v1
         with:
