--- a/.github/workflows/on-push-to-main.yaml
+++ b/.github/workflows/on-push-to-main.yaml
@@ -37,5 +37,6 @@ jobs:
           publish: pnpm release
           commit: "chore: publish package(s)"
           title: "chore: publish package(s)"
+          commitMode: "github-api"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
