chore: temporary ignore sdk for changeset (#20)

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -10,5 +10,6 @@
   "snapshot": {
     "useCalculatedVersion": false,
     "prereleaseTemplate": "{tag}-{commit}"
-  }
+  },
+  "ignore": ["@enzymefinance/onyx-sdk"]
 }
